...
            Text("Previous 7 Days").tag("week")
            Text("Older").tag("older")
          }
        }
        .pickerStyle(.navigationLink)
      }
      .navigationTitle("Filters")
      .toolbar {
        ToolbarItem(placement: .cancellationAction) {
          Button("Clear") {
            clear()
            dismiss()
          }
...
